<resources>
    <string name="app_name">Walker</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">设置</string>
    <string name="tv_title_text">Walker</string>
    <string name="tv_top_menu_text">菜单栏</string>
    <string name="tv_top_map_text">地图</string>
    <string name="edt_city_text">城市</string>
    <string name="btn_weather_text">查询天气</string>
    <string name="edt_user_text">请输入账号</string>
    <string name="edt_password_text">请输入密码</string>
    <string name="btn_login_text">登陆</string>
    <string name="btn_regist_text">注册</string>
    <string name="tv_change_photo_text">更换头像</string>
    <string name="edt_userName">账号</string>
    <string name="edt_motto_text">座右铭(不多于8个字)</string>
    <string name="edt_email_text">邮箱(**@**.com)</string>
    <string name="edt_stepLength_text">步长(cm)</string>
    <string name="edt_height_text">身高(cm)</string>
    <string name="edt_weight_text">体重(kg)</string>
    <string name="edt_userFeatherSport_text">期望运动量(步/日)</string>
    <string name="edt_regist_text">注册</string>
    <string name="regist_tip_text">哎，终于填完资料了，真不容易，谢谢亲的支持，么么哒O(∩_∩)O</string>
    <string name="edt_pass_text">密码</string>
    <string name="edt_nick_text">昵称</string>
    <string name="test_inform_nick_text">monster</string>
    <string name="test_inform_city_text">山东滨州</string>
    <string name="tv_label_text">健康标签(    步长,身高,体重,每日运动量    )</string>
    <string name="test_inform_getStepLength_text">40</string>
    <string name="test_inform_getHeight_text">170</string>
    <string name="test_inform_getWeight_text">55</string>
    <string name="test_inform_getFeather_text">5000</string>
    <string name="tv_userName">账号信息</string>
    <string name="tv_motto">座右铭</string>
    <string name="tv_email">邮箱信息</string>
    <string name="test_inform_getUserName_text">123456789</string>
    <string name="test_inform_getMotto_text">我是一个小怪兽</string>
    <string name="test_inform_getEmail_text">123456789@qq.com</string>
    <string name="btn_updateInform_text">编辑资料</string>
    <string name="update_inform_cancel_text">取消</string>
    <string name="update_inform_title_text">编辑资料</string>
    <string name="update_inform_complete_text">完成</string>
    <string name="tv_nick_text">昵称</string>
    <string name="edt_test_city_text">城市</string>
    <string name="edt_test_city_name_text">滨州</string>
    <string name="tv_stepLenth_text">步长(cm)</string>
    <string name="tv_height_text">身高(cm)</string>
    <string name="tv_weight_text">体重(kg)</string>
    <string name="tv_future_text">期望运动量(步/日)</string>
    <string name="left_menu_user_test_text">Walker</string>
    <string name="left_menu_motto_test_text">奔跑无止境</string>
    <string name="left_menu_photo_test_text">登陆图标</string>
    <string name="left_menu_login_test_text">用户登录</string>
    <string name="left_menu_inform_test_text">个人信息</string>
    <string name="left_menu_user_history_text">行程记录</string>
    <string name="left_menu_notepad_test_text">行程笔记</string>
    <string name="left_menu_weather_test_text">天气查询</string>
    <string name="left_menu_health_test_text">健康栏目</string>
    <string name="left_menu_setting_test_text">软件设置</string>
    <string name="tips_title_text">友情提示</string>
    <string name="tips_content_text">亲，您还没有登录啦，快点去登录吧^_^</string>
    <string name="soft_help_text">使用说明</string>
    <string name="icons_setting_img_text">图片</string>
    <string name="soft_team_text">团队介绍</string>
    <string name="soft_version_text">版本信息</string>
    <string name="soft_update_text">版本更新</string>
    <string name="soft_advice_text">意见反馈</string>
    <string name="soft_loginout_text">注销</string>
    <string name="forget_pass"><u>忘记密码</u></string>
    <string name="forget_title">找回密码</string>
    <string name="forget_tips">ps : 请输入您注册时候的邮箱</string>
    <string name="btn_forget_title">一键找回</string>
    <string name="forget_email">请输入邮箱</string>
    <string name="activity_advice_text">意见反馈</string>
    <string name="advice_text">请输入您的宝贵意见</string>
    <string name="submit_advice_text">提交</string>
     <string name="question_first">Q:这款软件都有哪些功能呢？</string>
    <string name="answer_first">A:这款软件主要有：用户登录，运动测试，个人信息，行程记录，行程笔记，天气查询，健康栏目以及关于软件设置等功能模块。</string>
    <string name="question_second">Q：这款软件应该如何使用呢？</string>
    <string name="answer_second">A：打开该软件，如果你是新用户将首先进行注册，如果已有帐号，直接登录即可。</string>
    <string name="question_third">Q:那登录之后应该怎样继续操作呢？</string>
    <string name="answer_third">A:登录该软件后，新用户首先应该更换自己的头像，然后填写自己的个人信息，填好之后，确定。</string>
    <string name="question_four">Q:对于运动测试，用户应该如何进行测试呢？</string>
    <string name="answer_four">A:用户可以根据自己想要测试的类别，有骑行，步行等。选择相应类别之后，点击开始。</string>
    <string name="question_five">Q:这个行程记录是做什么的呢？</string>
    <string name="answer_five">A:行程记录这个部分，当用户选择合适的运动类型之后，点击开始，该软件将会对用户的运动记录实时记录，还能对用户进行一些定位等操作。</string>
    <string name="question_six">Q:还能对用户进行定位，这么厉害！看起来这个软件不错奥。那下面的天气查询，查询的是真实的天气么？</string>
    <string name="answer_six">A:当然，当用户输入查询天气的名称，点击查询，软件就会自动对输入的城市进行天气查询，并查询出一周的天气情况。</string>
    <string name="question_seven">Q:还能对用户进行定位，这么厉害！看起来这个软件不错奥。那下面的天气查询，查询的是真实的天气么？</string>
    <string name="answer_seven">A:当然，当用户输入查询天气的名称，点击查询，软件就会自动对输入的城市进行天气查询，并查询出一周的天气情况。</string>
    <string name="question_eight">Q:我看下面还有一个软件设置，这里面主要包含哪些呢？</string>
    <string name="answer_eight">A:软件设置模块主要有使用说明，团队介绍，版本信息，版本更新，以及意见反馈等。</string>
    <string name="question_night">Q:版本更新？还能进行版本更新？</string>
    <string name="answer_night">A:对呀，如果用户需要进行版本更新，可以进行软件的更新操作的。</string>
    <string name="question_ten">Q:这么厉害的软件，现在让我们一起了解使用这个软件吧。</string>
    <string name="team_intro">"        我们每一个成员，都经过国家安全指标筛选，请用户放心使用Walker，不会掉节操"</string>
    <string name="soft_name">Walker</string>
    <string name="soft_version">Ver 1.0</string>
    <string name="soft_url">mywalk.bmob.cn</string>
    <string name="soft_power">Powered     by      niZhan</string>
    <string name="left_menu_sport_test_text">运动测试</string>
    <string name="sport_test_city_text">滨州</string>
    <string name="sport_temper_city_text">25°C</string>
    <string name="sport_test_week_text">星期五</string>
    <string name="sport_test_weather_text">多云转晴</string>
    <string name="sport_test_walk_text">心率</string>
    <string name="sport_test_bike_text">跑步</string>
    <string name="sport_test_note_text">笔记</string>
     <string name="tip_title">标题</string>
    <string name="tip_input_title">请输入标题</string>
    <string name="tip_content">内容</string>
    <string name="tip_save">保存</string>
    <string name="tip_cancel">取消</string>
    <string name="tip_photo">拍照</string>
    <string name="tip_title_bar_cancel">取消</string>
    <string name="tip_title_bar_complete">完成</string>
    <string name="tip_note_list">笔记列表</string>
    <string name="tip_add">添加</string>
    <string name="tip_note">记事本</string>
    <string name="tip_test">跳转测试</string>
    <string name="tip_title_edit_note">编辑笔记</string>
    <string name="tip_icon_media">图标</string>
    <string name="tip_list_null">您还没有添加任何笔记,添加个新笔记,记录下您的行程风景吧~~</string>
    <string name="tip_add_new_note">添加新笔记</string>
    <string name="notification_subtitle">Counting your steps</string>
    <string name="started"></string>
    <string name="stopped"></string>
    <string name="steps">steps</string>
    <string name="kilometers">kilometers</string>
    <string name="miles">miles</string>
    <string name="steps_per_minute">steps / minute</string>
    <string name="kilometers_per_hour">kilometers / hour</string>
    <string name="miles_per_hour">miles / hour</string>
    <string name="calories_burned">calories burned</string>
    <string name="centimeters">centimeters</string>
    <string name="inches">inches</string>
    <string name="kilograms">kilograms</string>
    <string name="pounds">pounds</string>
    <string name="desired_pace">Desired pace:</string>
    <string name="desired_speed">Desired speed:</string>
    <string name="pause">Pause</string>
    <string name="resume">Resume</string>
    <string name="reset">Reset</string>
    <string name="sports_title_text">运动</string>
    <string name="settings">设置</string>
    <string name="activity_settings">计步器设置</string>
    <string name="steps_settings_title">基本设置</string>
    <string name="sensitivity_setting">灵敏度</string>
    <string name="sensitivity_setting_details">校准步数检测器</string>
    <string name="sensitivity_setting_title">选择灵敏度等级</string>
    <string name="extra_high">超高</string>
    <string name="very_high">很高</string>
    <string name="high">稍高</string>
    <string name="higher">高</string>
    <string name="medium">介质</string>
    <string name="lower">较低</string>
    <string name="low">低</string>
    <string name="very_low">非常低</string>
    <string name="extra_low">超低</string>
    <string name="operation_level_setting">操作方式</string>
    <string name="operation_level_setting_details">一些操作系统的版本，在屏幕关闭时，防止使用传感器；设置为您工作的水平</string>
    <string name="operation_level_setting_title">选择操作级别</string>
    <string name="run_in_background">正常（在背景下尝试运行）</string>
    <string name="keep_screen_on">屏幕上（保持屏幕暗淡）</string>
    <string name="wake_up">强势（在我关掉屏幕时唤醒）</string>
    <string name="units_setting">单位</string>
    <string name="units_setting_details">帝国或公制单位</string>
    <string name="units_setting_title">
选择你的单位</string>
    <string name="units_metric">公制（公里）</string>
    <string name="units_imperial">帝国（英里）</string>
    <string name="step_length_setting">步长</string>
    <string name="step_length_setting_details">对于距离，速度和热量计算</string>
    <string name="step_length_setting_title">输入你的步长</string>
    <string name="body_weight_setting">体重</string>
    <string name="body_weight_setting_details">热量计算</string>
    <string name="body_weight_setting_title">输入你的体重</string>
    <string name="exercise_type_setting">运动型</string>
    <string name="exercise_type_setting_details">热量计算</string>
    <string name="exercise_type_setting_title">选择运动型</string>
    <string name="exercise_type_running">运动</string>
    <string name="exercise_type_walking">走路</string>
    <string name="maintain_setting">保持速度/速度</string>
    <string name="maintain_setting_details">保持一个理想的速度/速度</string>
    <string name="maintain_setting_title">保持：</string>
    <string name="maintain_nothing">无</string>
    <string name="maintain_pace">步伐</string>
    <string name="maintain_speed">速度</string>
    <string name="voice_settings_title">声音</string>
    <string name="voice_setting">说话</string>
    <string name="voice_setting_details">启用/禁用语音通知</string>
    <string name="speaking_interval_setting">间隔</string>
    <string name="speaking_interval_setting_details">语音通知间隔</string>
    <string name="interval_15_seconds">15 s</string>
    <string name="interval_30_seconds">30 s</string>
    <string name="interval_1_minute">1 minute</string>
    <string name="interval_2_minutes">2 minutes</string>
    <string name="interval_5_minutes">5 minutes</string>
    <string name="interval_10_minutes">10 minutes</string>
    <string name="tell_what">What to tell</string>
    <string name="tell_steps_setting">步数</string>
    <string name="tell_steps_setting_details"></string>
    <string name="tell_pace_setting">步伐</string>
    <string name="tell_pace_setting_details">步/分钟</string>
    <string name="tell_distance_setting">距离</string>
    <string name="tell_distance_setting_details">公里或英里</string>
    <string name="tell_speed_setting">速度</string>
    <string name="tell_speed_setting_details">公里/小时或英里</string>
    <string name="tell_calories_setting">燃烧卡路里</string>
    <string name="tell_calories_setting_details"></string>
    <string name="tell_fasterslower_setting">Faster/slower</string>
    <string name="tell_fasterslower_setting_details">帮助你保持你想要的速度或速度（间隔不适用）</string>
    <string name="incorrect_step_length">不正确的格式STEP-NC的长度。去设置改变它！</string>
    <string name="quit">Quit</string>
    <string name="reback_line">轨迹回放</string>
    <string name="healthy_ill">疾病防治</string>
    <string name="healthy_news">健康新知</string>
    <string name="note_tips_text">请在此处输入标题</string>
</resources>