<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="50.0dip"
    android:background="@drawable/bg_title_bar"
    android:gravity="center_vertical" >

     <TextView
        android:id="@+id/note_list_title_bar_menu_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:layout_marginLeft="15.0dip"
        android:layout_marginTop="3.0dip"
        android:text="@string/tip_title_bar_cancel"
        android:textColor="#ffffff"
        android:textSize="15sp" />
    
    <TextView
        android:id="@+id/note_list_title_bar_menu_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/tip_note_list"
        android:textColor="#ffffff"
        android:textSize="15sp" />

     <TextView
        android:id="@+id/note_list_title_bar_menu_add_note"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:layout_marginLeft="3.0dip"
        android:layout_marginRight="15.0dip"
        android:layout_marginTop="3.0dip"
        android:background="@drawable/icon_title_bar_add"
        android:contentDescription="@string/tip_add"
        android:textColor="#ffffff"
        android:textSize="15sp" />

</RelativeLayout>