<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:background="@drawable/_bg_login">
    
    <EditText 
        android:id="@+id/edt_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edt_user_text"
        android:layout_marginTop="10dp" 
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:singleLine="true"
        android:drawableLeft="@drawable/icons_user_img"
       android:background="@android:drawable/edit_text"/>

    <EditText 
        android:id="@+id/edt_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edt_password_text"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp" 
        android:layout_marginLeft="10dp"
        android:layout_below="@id/edt_user"
        android:inputType="textPassword"
         android:singleLine="true"
        android:background="@android:drawable/edit_text"
        android:drawableLeft="@drawable/icons_password_img"/>
    
    <LinearLayout 
        android:id="@+id/ly_operate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edt_pass"
        android:layout_marginTop="15dp"
        android:baselineAligned="false"
        android:orientation="horizontal">
           <cn.edu.bzu.util.RevealLayout
			   android:layout_width="match_parent"
			    android:layout_height="wrap_content" 
			     android:layout_weight="1"> 
        <Button 
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_login_text"
            android:background="@drawable/btn_select"
            android:layout_marginLeft="10dp"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_weight="1"/>
        </cn.edu.bzu.util.RevealLayout>
        
  <cn.edu.bzu.util.RevealLayout
	  android:layout_width="match_parent"
	   android:layout_height="wrap_content" 
	    android:layout_weight="1"> 
 		 <Button 
            android:id="@+id/btn_regist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_regist_text"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            style="?android:attr/buttonBarButtonStyle"
            android:background="@drawable/btn_select"
           />      
         </cn.edu.bzu.util.RevealLayout>
    </LinearLayout>

    <TextView 
        android:id="@+id/forget_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ly_operate"
        android:layout_alignParentRight="true"
        android:text="@string/forget_pass"
        android:layout_marginRight="12dp"
        android:layout_marginTop="15dp"/>
    <LinearLayout 
        android:id="@+id/divide"
        android:layout_below="@id/forget_pass"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:orientation="horizontal"
        android:background="@color/darkgray"
        android:layout_marginTop="10dp"/>
</RelativeLayout>
